remove product from the cart functionality